--- a/style.css
+++ b/style.css
@@ -24,15 +24,14 @@ h1 {
 }
 
 main {
-    width: 600px;
+    width: 70%;
     display: flex;
     flex-direction: column;
     gap: 30px;
 }
 
 .accordion-wrapper {
-    padding: 30px;
-    width: 100%;
+    padding: 25px;
     background-color: white;
     border-radius: 10px;
 }
@@ -41,6 +40,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 }
 
 h2 {
@@ -90,4 +90,30 @@ button:hover {
 
 .show-chevron-up {
     display: block;
+}
+
+/* Media Query */
+
+@media screen and (max-width: 600px) {
+    main {
+        width: 90%;
+        gap: 20px;
+    }
+
+    h2 {
+        font-size: 16px;
+    }
+
+    button {
+        font-size: 16px;
+    }
+
+    .accordion-wrapper {
+        padding: 15px;
+    }
+
+    .accordion-text {
+        font-size: 14px;
+        line-height: 20px;
+    }
 }
