--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ h2 {
     font-size: 18px;
     color: #256D85;
     font-weight: 700;
+    letter-spacing: 1px;
 }
 
 button {
@@ -61,6 +62,7 @@ button {
 
 button:hover {
     color: #47B5FF;
+    transform: scale(1.1);
 }
 
 .up {
@@ -75,7 +77,6 @@ button:hover {
     color: #06283D;
     font-size: 16px;
     line-height: 24px;
-
 }
 
 /* Dynamic Classes */
